# CHIP-8_emulator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  Makefile_genBy_CMake  README.md  my_CMakeLists.txt  my_Makefile  package_list.txt
docs/: Doxyfile.in  syst_description.mkd
docs/html/: Chip8_8h.html  Chip8_8h__incl.md5  Chip8_8h_source.html  Chip8__common_8h.html  Chip8__common_8h.js  Chip8__common_8h__dep__incl.md5  Chip8__common_8h__incl.md5  Chip8__common_8h_source.html  Platform_8h.html  Platform_8h__incl.md5  Platform_8h_source.html  annotated.html  annotated_dup.js  classChip8-members.html  classChip8.html  classChip8.js  classPlatform-members.html  classPlatform.html  classPlatform.js  classes.html  dir_000002_000000.html  dir_000003_000000.html  dir_1d0dbcc58d36c70824090360a8703484.html  dir_1d0dbcc58d36c70824090360a8703484_dep.md5  dir_4b68c2fef3e151b6b93d5e93b14f1857.html  dir_4b68c2fef3e151b6b93d5e93b14f1857_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/latex/: Chip8_8h.tex  Chip8_8h__incl.md5  Chip8__common_8h.tex  Chip8__common_8h__dep__incl.md5  Chip8__common_8h__incl.md5  Platform_8h.tex  Platform_8h__incl.md5  annotated.tex  classChip8.tex  classPlatform.tex  files.tex  refman.tex
docs/xml/: CMakeLists_8txt.xml  Chip8_8cpp.xml  Chip8_8h.xml  Chip8__common_8h.xml  Opcodes_8cpp.xml  Platform_8cpp.xml  Platform_8h.xml  classChip8.xml  classPlatform.xml  dir_1d0dbcc58d36c70824090360a8703484.xml  dir_4b68c2fef3e151b6b93d5e93b14f1857.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  gro__main_8cpp.xml  index.xml  main_8cpp.xml
gitlab_ci/: build_pipeline.yml  classic_pipeline.yml  includes.yml
include/: Chip8.h  Chip8_common.h  Platform.h
intellectual_ressources/Building a CHIP-8 Emulator [C++] - Austin Morlan_files/: syntax.css
refs/: Building a CHIP-8 Emulator [C++] - Austin Morlan.html
refs/Building a CHIP-8 Emulator [C++] - Austin Morlan_files/: style.css
src/: CMakeLists.txt  Chip8.cpp  Chip8.h  Chip8_cst.h  Main.cpp  Makefile  Opcodes.cpp  Platform.cpp  gro_main.cpp  main.cpp
src/chip8/: Chip8.cpp  Opcodes.cpp
tests/: CMakeLists.txt  test_platform.cpp  test_platform_w_mockup.cpp
tests/include/: TestChip8.h  Tests_common.h
tests/include/platform/: TestPlatform.h
tests/src/: TestChip8.cpp  TestOpcodes.cpp  TestPlatform.cpp  Tests_common.cpp  test_main.cpp
tests/src/chip8/: TestChip8.cpp  TestOpcodes.cpp
tests/src/platform/: TestPlatform.cpp
